crates/es-fluent-derive/tests/ui/fluent_variants_origin_requires_label.rs
extern crate es_fluent;

use es_fluent_derive::EsFluentVariants;

#[derive(EsFluentVariants)]
#[fluent_label(origin)]
pub struct LoginForm {
    username: String,
}

fn main() {}
